tests/builtin_collision_fn_print_bad.hop
// Verifies builtin function collisions use ordinary function identity.
fn print(message &str) {}
